Style : 책 페이지 댓글 위치 수정

--- a/src/page/book/Book.css
+++ b/src/page/book/Book.css
@@ -229,13 +229,12 @@
   gap: 8px;
 }
 
-.chapter-comments {
+.comment-count {
   display: flex;
   align-items: center;
   gap: 3px;
   font-size: 0.7rem;
   color: var(--text-tertiary);
-  margin-top: 0;
 }
 
 .chapter-arrow {
