--- a/src/page/book/Book.css
+++ b/src/page/book/Book.css
@@ -39,6 +39,8 @@
   height: 160px;
   border-radius: 4px;
   overflow: hidden;
+  border: 1px solid var(--border-color);
+  background: var(--bg-tertiary);
 }
 
 .book-cover-lg img {
@@ -55,6 +57,7 @@
   justify-content: center;
   font-size: 3rem;
   opacity: 0.3;
+  background: var(--bg-tertiary);
 }
 
 .book-info-detail {
