--- a/src/page/dev/DevPost.css
+++ b/src/page/dev/DevPost.css
@@ -18,15 +18,19 @@
 
 .devpost-cover {
   width: 100%;
-  max-height: 360px;
+  max-height: 240px;
   overflow: hidden;
   border-bottom: 1px solid var(--border-color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: var(--bg-tertiary);
 }
 
 .devpost-cover img {
   width: 100%;
-  height: 100%;
   object-fit: cover;
+  max-height: 240px;
 }
 
 .devpost-header {
